# libuv_proxy

./: CMakeLists.txt  Debug.txt  README.md  x64.txt  清理垃圾文件.bat
GxProxy/: .cproject  .project  GxProxy.cpp  GxProxy.h  config.xml  main.cpp  makefile  myClient.cpp  myClient.h  myCmd.cpp  myCmd.h  myConfig.cpp  myConfig.h  myDefine.h  myMQ.cpp  myMQ.h  myProxy.cpp  myProxy.h  myServer.cpp  myServer.h  todo.txt
GxServer/: GxServer.sln  GxServer.vcxproj
LibXs/: LibXs.h  SafeContainer.h  Singleton.h  XLog.cpp  XLog.h  XNetBuffer.h  XTcpClient.cpp  XTcpClient.h  config.h  xnet.cpp  xnet.h
LibXs/XServer/: PosixDaemon.cpp  PosixDaemon.h  ServiceWin32.cpp  ServiceWin32.h
LibXs/XString/: StrUtil.cpp  StrUtil.h  XString.h  XStringEx.cpp  XStringEx.h  utf8util.cpp  utf8util.h
LibXsMQClient/: .cproject  .project  LibXsMQClient.h
Test/: test_client_main.cpp
XsMQ/: .cproject  .project
XsMQClient/: .cproject  .project
libuv/include/: uv-unix.h  uv.h
libuv/lib/Win32Debug/: libuv.lib
libuv/lib/WinX64Debug/: libuv.lib
